# MartBot

./: README.md
logitech_f710_ros/: CMakeLists.txt
src/Webcam_rviz/: README.md
src/Webcam_rviz/src/cam/: CMakeLists.txt  package.xml
src/Webcam_rviz/src/cam/launch/: cam.launch
src/detection_msgs/: CMakeLists.txt  package.xml
src/hoverboard-driver/: CMakeLists.txt
src/hoverboard-driver/config/: controllers.yaml  hardware.yaml  twist_mux.yaml
src/hoverboard-driver/launch/: hoverboard.launch
src/imu/: CMakeLists.txt  package.xml
src/imu/launch/: imu.launch
src/logitech_f710_ros/launch/: joy_teleop.launch
src/logitech_f710_ros/src/: joy_node.cpp
src/martbot_description/: CMakeLists.txt  package.xml
src/martbot_description/meshes/: Hoverboard_WheelsL.STL  Hoverboard_WheelsR.STL  base.STL  caster_pivot.STL  caster_wheel.STL  layer1.STL  mount.STL  rplidar.dae
src/martbot_description/urdf/: color_gazebo.xacro  colors.xacro  martbot.urdf.xacro  martbot_gazebo.xacro  plugins.gazebo
src/yolov5_ros/: CMakeLists.txt  package.xml
src/yolov5_ros/launch/: sub_launch.launch  yolov5.launch  yolov5_regular.launch
src/yolov5_ros/src/: detect.py  detect_gui.py  detect_mod.py  sub_node.py
