<?xml version="1.0"?>
<package format="2">
  <name>imu</name>
  <version>0.0.0</version>
  <description>The imu package</description>

  <maintainer email="martbot@todo.todo">martbot</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
